# rain

./: .gitignore  README.md  _config.yml  index.html  privacy.html  pyproject.toml
_posts/: 2025-11-13-python-vs-DevOps.md  2026-01-09-aws_glue_pipeline.md  2026-05-03-ChatGPT-Projects-Long-Text-Data-Boundaries.md  2026-05-05-Starburst-Federated-Analytics.md  2026-05-06-MarkItDown-MCP-Local-Wheel-Install-Python-CLI-Wrapper.md  2026-05-10-ChatGPT-Math-Rendering-Tau-vs-Pi.md  2026-05-11-The-Prompt-Evolved-Into-Infrastructure.md  2026-05-11-effective-context-engineering.md
ai-ml/: LI_Sherry_LAB1.ipynb  LI_Sherry_LAB2_partA.ipynb  README.md  markitdown_mcp_client_convert.py
garden-of-thoughts/: 2016-04-30-Typical AWS Glue pipeline.md  2025-11-13-python-vs-DevOps.md  2026-01-09-aws_glue_pipeline.html  2026-01-09-aws_glue_pipeline.md  2026-05-03-ChatGPT-Projects-Long-Text-Data-Boundaries.html  2026-05-03-ChatGPT-Projects-Long-Text-Data-Boundaries.md  2026-05-05-Starburst-Federated-Analytics.html  2026-05-05-Starburst-Federated-Analytics.md  2026-05-06-MarkItDown-MCP-Local-Wheel-Install-Python-CLI-Wrapper.html  2026-05-06-MarkItDown-MCP-Local-Wheel-Install-Python-CLI-Wrapper.md  2026-05-10-ChatGPT-Math-Rendering-Tau-vs-Pi.html  2026-05-10-ChatGPT-Math-Rendering-Tau-vs-Pi.md  2026-05-11-Memory-filled-up-PROTOCOL_ERROR.html  2026-05-11-Memory-filled-up-PROTOCOL_ERROR.md  2026-05-11-The-Prompt-Evolved-Into-Infrastructure.html  2026-05-11-The-Prompt-Evolved-Into-Infrastructure.md  2026-05-11-effective-context-engineering.html  2026-05-11-effective-context-engineering.md  README.md  (+12 more)
(+3 files in other folders)
